@@ -1,3 +1,6 @@
+2006-04-04 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
+	* dmailer should not remove comments when inside script and style tags.
+
 2006-03-24 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
 	* Use $_SERVER['PHP_SELF'] when available in dmailerd.phpcron and returnmail.phpsh
 	* Fix bugtracker issue 2982: do not send emails without any content.
